Improves rendering of Overpass data; add OSM link to Overpass popups (see #467)
- add some styling to the Overpass data table (alternating row colors; text alignment)
- add link to OSM object below the Overpass data table
- add 4 new entries in `en.json`

--- a/locales/en.json
+++ b/locales/en.json
@@ -81,6 +81,10 @@
     "customize": "Customize layers",
     "opacity-slider": "Opacity slider",
     "overpass-loading-indicator": "Running Overpass API query ...",
+    "overpass-table-key": "Key",
+    "overpass-table-value": "Value",
+    "overpass-inspect-at-openstreetmap": "Inspect Object at OpenStreetMap",
+    "overpass-osm": "OSM",
     "remove-selection": "Remove selection"
   },
   "loadNogos": {
