Remove `>` from default export name (#202)
as it requires encoding in XML and gets removed in filename anyway.

--- a/locales/en.json
+++ b/locales/en.json
@@ -36,7 +36,7 @@
     "format_kml": "KML",
     "include": "Include",
     "include_waypoints": "Waypoints",
-    "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
+    "route-from-to": "{{from}} - {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
     "title": "Export route",
     "trackname": "Name"
